--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
     --secondary-hover: hsla(202, 73%, 15%, 100%);
     --tertiary: hsla(15, 40%, 70%, 100%);
     --tertiary-hover: hsla(15, 50%, 60%, 100%);
-    --font-color: #1d1d1d;
+    --font-color: #dadada;
 
     --gray-0: #222222;
     --gray-1: #666666;
@@ -114,7 +114,7 @@ body {
     line-height: var(--line-height);
     font-family: "Nunito", "Segoe UI", "Roboto", sans-serif;
     font-weight: 400;
-    color: #dadada;
+    color: var(--font-color);
 }
 
 h1,
