--- a/css/style.css
+++ b/css/style.css
@@ -63,19 +63,23 @@
 
 #fullscreen-cover img {
     position: absolute;
-    min-height: 100%;
-    min-width: 100%;
     object-fit: cover;
     object-position: center;
     overflow: hidden;
+    height: 100%;
+    width: 100vw;
 }
 
 #fullscreen-cover {
     display: flex;
+    height: 100vh;
+    width: 100%;
     flex-flow: column nowrap;
-    justify-content: space-around;
-    align-content: space-around;
+    justify-content: center;
+    align-content: center;
     align-items: center;
+    margin-bottom: var(--line-height);
+    color: black;
 }
 
 /* End of Personal Project Styles */
