--- a/css/style.css
+++ b/css/style.css
@@ -59,30 +59,6 @@
     position: relative;
 }
 
-/* Personal Project Styles */
-
-#fullscreen-cover img {
-    position: absolute;
-    object-fit: cover;
-    object-position: center;
-    overflow: hidden;
-    height: 100%;
-    width: 100vw;
-}
-
-#fullscreen-cover {
-    display: flex;
-    height: 100vh;
-    width: 100%;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    margin-bottom: var(--line-height);
-    color: black;
-}
-
-/* End of Personal Project Styles */
 
 /* Images */
 img {
@@ -801,6 +777,39 @@ input:focus:invalid {
 }
 
 /* End of Grid System */
+
+/* Personal Project Styles */
+
+#fullscreen-cover img {
+    position: absolute;
+    object-fit: cover;
+    object-position: center;
+    overflow: hidden;
+    height: 100%;
+    width: 100vw;
+}
+
+#fullscreen-cover {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    margin-bottom: var(--line-height);
+    color: black;
+}
+
+.center-content {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+/* End of Personal Project Styles */
 
 /*
     * Window size styles
