--- a/css/style.css
+++ b/css/style.css
@@ -813,6 +813,27 @@ input:focus:invalid {
     align-content: center;
 }
 
+.star-rating {
+    letter-spacing: 3px;
+    height: 30px;
+    color: var(--font-color);
+    font-size: var(--h3);
+}
+.one-star::before {
+    content: '\2605 \2606 \2606 \2606 \2606';
+}
+.two-star::before {
+    content: '\2605 \2605 \2606 \2606 \2606';
+}
+.three-star::before {
+    content: '\2605 \2605 \2605 \2606 \2606';
+}
+.four-star::before {
+    content: '\2605 \2605 \2605 \2605 \2606';
+}
+.five-star::before {
+    content: '\2605 \2605 \2605 \2605 \2605';
+}
 
 
 .wide-background {
