--- a/css/style.css
+++ b/css/style.css
@@ -37,19 +37,20 @@
 
     
     /* Branding */
-    --primary: hsla(138, 33%, 39%, 100%);
-    --primary-hover: hsla(138, 45%, 25%, 100%);
-    --secondary: hsla(202, 73%, 32%, 100%);
-    --secondary-blurred: hsla(202, 60%, 45%, 100%);
-    --secondary-hover: hsla(202, 73%, 15%, 100%);
+    --primary: hsla(202, 73%, 32%, 100%);
+    --primary-blurred: hsla(202, 60%, 45%, 100%);
+    --primary-hover: rgb(30, 93, 127);
+    --secondary: hsla(138, 33%, 39%, 100%);
+    --secondary-blurred: rgb(47, 151, 78);
+    --secondary-hover: hsla(138, 45%, 25%, 100%);
     --tertiary: hsla(15, 40%, 70%, 100%);
     --tertiary-hover: hsla(15, 50%, 60%, 100%);
     --font-color: #dadada;
 
-    --gray-0: #222222;
-    --gray-1: #666666;
-    --gray-2: #999999;
-    --gray-3: #dadada;
+    --gray-0: #050505;
+    --gray-1: #090909;
+    --gray-2: #181818;
+    --gray-3: #252525;
 
     --white: white;
     --background-color: #030303;
@@ -328,12 +329,12 @@ textarea {
 
 /* Pseudo Selectors */
 .form-control:focus {
-    outline: var(--secondary-blurred) solid 2px;
+    outline: var(--primary-blurred) solid 2px;
     outline-offset: 2px;
 }
 
 .form-check-input:checked {
-    box-shadow: 0 0 4px 4px var(--secondary-blurred);
+    box-shadow: 0 0 4px 4px var(--primary-blurred);
 }
 
 .form-control:disabled,
@@ -836,18 +837,17 @@ input:focus:invalid {
 }
 
 
-.wide-background {
-    left: 0;
-    right: 0;
-    min-width: 100vw;
-    height: 100%;
+.background-secondary{
+    background-color: var(--gray-0);
+    overflow: hidden;
 }
 
-.background-primary{
-    background-color: var(--primary);
 }
-.background-secondary{
-    background-color: var(--secondary);
+
+.highlight-border {
+    border-left: var(--primary) solid 2px;
+    padding-left: var(--font-size);
+}
 }
 
 /* End of Personal Project Styles */
