--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
 :root {
 
@@ -872,6 +873,25 @@ input:focus:invalid {
     margin-bottom: var(--line-height);
 }
 
+.social-contacts li {
+    list-style-type: none;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-flow: row nowrap;
+    gap: var(--font-size);
+    align-items: center;
+    align-content: center;
+    justify-content: flex-start;
+}
+
+.social-contacts i {
+    aspect-ratio: 1;
+    font-size: var(--h3);
+}
+
+.social-contacts a {
+    color: var(--font-color);
+    text-decoration: none;
 }
 
 /* End of Personal Project Styles */
